2006-01-27:
    * CherryPy-2.2.0beta released
    * Lots of improvements to sessionfilter
    * Added cherrypy.lower_api switch (people get a speed boost if they
    *   set it to True)

2005-12-05:
    * Added support for specifying the Content-Type to be used by defaults
    * Added a response headers filter to specify HTTP headers

2005-12-03:
    * Huge change: switching to lowercase_with_underscore names everywhere ... CP keeps backward compatibility though (remi)

2005-10-21:
    * CherryPy-2.1.0 released
    * Changed the default value for sessionFilter.locking from "implicit" to "explicit" (remi)

2005-10-06:
    * CherryPy-2.1.0-rc2 released
    * Bug in sessionfilter fixed

2005-09-15:
    * CherryPy-2.1.0-rc1 released

2005-09-14:
    * The new HTTP error mechanism has been completely rewritten (see tutorial
    10)
    
2005-09-10:
    * New session implementation. See the CherryPy book for docs (remi)
    * New server.maxRequestBodySize and maxRequestHeaderSize options.
    *   See the CherryPy book for docs (remi)

2005-09-04:
    * Generalized mechanism for handling HTTP errors
    * raising a HTTPStatusError will automatically send an appropriate error page
    * All errors in production mode will cause CP to respond with a http error

2005-08-17:
    * The session filter has been simplified, the mechanism for creating multiple sessions has been removed. However .. (mikerobi)
    * The session filter can placed inside a _cpFilterList to provide an alternative to the default session.            (mikerobi)
    
2005-08-09:
    * The config section [global] is now distinct from, and the parent of, [/]. (fumanchu)
    * cherrypy.request.path is now parsed and set before onStartResource filter methods are called. (fumanchu)
    * Absolute Request-URI's are now acceptable, and are converted to relative paths. (fumanchu)
    * A Request-URI of "*" now maps to the [global] config section, and to cherrypy.root._global. (fumanchu)

2005-07-12: